webapp-deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-for-edge
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline

spec:
  finalizers:
  - kubernetes
