webapp-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/rbo/AI-for-edge-microshift-demo
    # image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"server:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"webapp\")].image","pause":"false"}]'
  labels:
    app: webapp
    app.kubernetes.io/component: webapp
    app.kubernetes.io/instance: webapp
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: python
    app.openshift.io/runtime: python
  name: webapp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webapp
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp
        deployment: webapp
    spec:
      serviceAccountName: privileged
      containers:
        - image: quay.io/rbohne/ai-for-edge-microshift-demo:webapp
          imagePullPolicy: IfNotPresent
          name: webapp
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /dev/video0
            name: dev-video0
          - mountPath: /model/
            name: model
          securityContext:
            privileged: true
      volumes:
      - name: dev-video0
        hostPath:
          path: /dev/video0
      - name: "model"
        emptyDir: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
