webapp-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/rbo/AI-for-edge-microshift-demo
  labels:
    app: webapp
    app.kubernetes.io/component: webapp
    app.kubernetes.io/instance: webapp
    app.kubernetes.io/name: webapp
    app.kubernetes.io/part-of: python
    app.openshift.io/runtime: python
  name: webapp
  namespace: ai-for-edge
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: webapp
    deployment: webapp
  sessionAffinity: None
  type: ClusterIP
